kubernetes/home/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
  namespace: home
spec:
  selector:
    matchLabels:
      app: home
  replicas: 2
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
      - name: home
        image: "gcr.io/google-samples/hello-app:2.0"

---

apiVersion: v1
kind: Service
metadata:
  name: home
  namespace: home
  labels:
    app: home
spec:
  type: ClusterIP
  selector:
    app: home
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
